--- a/config.yaml
+++ b/config.yaml
@@ -18,7 +18,7 @@ okx:
       private:  wss://wseeapap.okx.com:8443/ws/v5/private
 
 datafeed:
-  instIds: ["BTC-USDT-SWAP", "ETH-USDT-SWAP"] #"BTC-USDT-SWAP"]
+  instIds: ["ETH-USDT-SWAP"] #"BTC-USDT-SWAP"]
   mode: live
   # 三类 K 线：trade / mark / index  → 映射到 candle / mark-price-candle / index-candle
   channels:
