clean up repo, ready to adapt to redis

--- a/config.yaml
+++ b/config.yaml
@@ -16,14 +16,14 @@ okx:
       private:  wss://wseeapap.okx.com:8443/ws/v5/private
 
 datafeed:
-  instIds: ["ETH-USDT-SWAP"] #"DOGE-USDT-SWAP",
+  instIds: ["DOGE-USDT-SWAP"] #"DOGE-USDT-SWAP",
   mode: live
   # 三类 K 线：trade / mark / index  → 映射到 candle / mark-price-candle / index-candle
   channels:
     candles:
       fetch: true
       kind: "trade"
-      bars: ["5m","15m","30m","1H"]
+      bars: ["1m","15m","30m","1H"]
     trades:
       fetch: true
     books:
@@ -82,7 +82,7 @@ agent:
   align_to_5m: false
 
 cold_start:
-  duration_sec: 300
+  duration_sec: 3
   min_snapshots: 0
 
 auth:
