--- a/configs/okx_feature_config.yaml
+++ b/configs/okx_feature_config.yaml
@@ -13,7 +13,7 @@ okx:
       private:  wss://wseeapap.okx.com:8443/ws/v5/private
 
 datafeed:
-  instIds: ["BTC-USDT-SWAP", "ETH-USDT-SWAP", "DOGE-USDT-SWAP",] #"DOGE-USDT-SWAP",
+  instIds: ["BTC-USDT-SWAP", "DOGE-USDT-SWAP",] # "ETH-USDT-SWAP", 
   mode: live
   
   channels:
@@ -65,42 +65,3 @@ datafeed:
 
   out_dir: "data/feed"
   store_backend: "csv"   # csv | parquet
-
-persist:
-  csv_path: "data/features.csv"
-  sqlite_path: "data/features.db"
-  sqlite_table: "features"
-  flush_interval_s: 5
-  max_buffer_rows: 10
-
-agent:
-  min_snapshot_interval_ms: 600_000
-  align_to_5m: false
-
-cold_start:
-  duration_sec: 3
-  min_snapshots: 0
-
-auth:
-  api_key: "${API_KEY}"
-  secret_key: "${SECRET_KEY}"
-  passphrase: "${PASSPHRASE}"
-
-trading:
-  env: PAPER                # PAPER / LIVE
-  simulated_header: true
-  instType: SWAP
-  leverage: 5
-  posMode: net              # net / long_short
-  tdMode: cross             # cross / isolated
-  slippage_bps: 10
-  reconcile:
-    poll_ms: 600
-    timeout_ms: 5000
-  ws:
-    reconnect_backoff_ms: [500, 1000, 2000, 5000]
-  timeouts:
-    rest_ms: 3000
-  retries:
-    rest_max_attempts: 3
-    backoff_ms: 200
