--- a/configs/okx_feature_config.yaml
+++ b/configs/okx_feature_config.yaml
@@ -20,7 +20,7 @@ datafeed:
     candles:
       fetch: true
       kind: "trade"
-      bars: ["15m","30m","1H","4H"]
+      bars: ["5m", "15m","30m","1H","4H"]
     trades:
       fetch: true
     books:
